# text-rpg

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  test.txt
.github/workflows/: commitlint.yml  lint.yml  only_dev_to_main.yml
src/rpg/: combat.py  enemy.py  items.py  llm_integration.py  main.py  map.py  player.py  world.py  world_content.py
tests/: test_player.py
