[project]
name = "text-rpg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "commitizen>=4.13.8",
    "pre-commit>=4.5.1",
    "ruff>=0.15.2",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

